src/snapshots/skip_lists__range_mapped__test__flush_to_gap.snap
---
source: src/range_mapped.rs
expression: list.output_dot()
---
digraph {
  node [shape=plaintext];
  rankdir="TB";
  ranksep="0.02";
  splines=polyline;

n3 [group="h0",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR>
      <TD>0</TD>
    </TR>
    <TR>
      <TD>6</TD>
    </TR>
  </TABLE>
>]

n2 [group="h1",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">0</TD>
          <TD>1</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n1 [group="h2",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD>1</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n6 [group="h0",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR>
      <TD>1</TD>
    </TR>
    <TR>
      <TD>1</TD>
    </TR>
  </TABLE>
>]

n5 [group="h1",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">1</TD>
          <TD>3</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n4 [group="h2",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">1</TD>
          <TD>3</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n9 [group="h0",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR>
      <TD>3</TD>
    </TR>
    <TR>
      <TD>13</TD>
    </TR>
  </TABLE>
>]

n8 [group="h1",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">3</TD>
          <TD>7</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n7 [group="h2",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">3</TD>
          <TD>7</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n12 [group="h0",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR>
      <TD>7</TD>
    </TR>
    <TR>
      <TD>71</TD>
    </TR>
  </TABLE>
>]

n11 [group="h1",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">7</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n10 [group="h2",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">7</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n0 [group="h3",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD PORT="p1">1</TD>
          <TD PORT="p2">3</TD>
          <TD PORT="p3">7</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

  n2:p0:s -> n3:n [weight=0.01]
  n1:p0:s -> n2:n [weight=0.01]
  n5:p0:s -> n6:n [weight=0.01]
  n4:p0:s -> n5:n [weight=0.01]
  n8:p0:s -> n9:n [weight=0.01]
  n7:p0:s -> n8:n [weight=0.01]
  n11:p0:s -> n12:n [weight=0.01]
  n10:p0:s -> n11:n [weight=0.01]
  n0:p0:s -> n1:n [weight=0.01]
  n0:p1:s -> n4:n [weight=0.01]
  n0:p2:s -> n7:n [weight=0.01]
  n0:p3:s -> n10:n [weight=0.01]
}

