src/snapshots/skip_lists__range_mapped__test__fuzz_repro1.snap
---
source: src/range_mapped.rs
expression: list.output_dot()
---
digraph {
  node [shape=plaintext];
  rankdir="TB";
  ranksep="0.02";
  splines=polyline;

n1 [group="h4",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
      Insert(0, 16777216, 5) Insert(1, 1515847770, 0) Insert(10246746, 0, 2)    </TD></TR>
    <TR><TD>
    </TD></TR>
  </TABLE>
>]

n0 [group="h5",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD PORT="p1">0</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

  n0:p0:s -> n1:n [weight=0.01]
  n0:p1:s -> n1:n [weight=0.01]
}

