src/snapshots/skip_lists__range_mapped__test__index_subentries_in_leaf_search.snap
---
source: src/range_mapped.rs
expression: list.output_dot()
---
digraph {
  node [shape=plaintext];
  rankdir="TB";
  ranksep="0.02";
  splines=polyline;

n3 [group="h0",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD> ∅ </TD></TR>
  </TABLE>
>]

n2 [group="h1",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD>59</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n1 [group="h2",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD>59</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n6 [group="h0",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR>
      <TD>59</TD>
    </TR>
    <TR>
      <TD>1817837568</TD>
    </TR>
  </TABLE>
>]

n5 [group="h1",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">59</TD>
          <TD>168034394</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n8 [group="h0",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR>
      <TD>168034394</TD>
      <TD>2565275692</TD>
    </TR>
    <TR>
      <TD>945460521</TD>
      <TD>1509960833</TD>
    </TR>
  </TABLE>
>]

n7 [group="h1",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">168034394</TD>
          <TD>4279185920</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n4 [group="h2",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
      Insert(805329408, 741684533, 2)    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">59</TD>
          <TD PORT="p1">168034394</TD>
          <TD>4279185920</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n11 [group="h0",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR>
      <TD>4279185920</TD>
    </TR>
    <TR>
      <TD>65535</TD>
    </TR>
  </TABLE>
>]

n10 [group="h1",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">4279185920</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n9 [group="h2",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">4279185920</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

n0 [group="h3",label=<
<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
    <TR><TD>
    </TD></TR>
    <TR><TD>
      <TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0">
        <TR>
          <TD PORT="p0">-∞</TD>
          <TD PORT="p1">59</TD>
          <TD PORT="p2">4279185920</TD>
          <TD>∞</TD>
        </TR>
      </TABLE>
    </TD></TR>
  </TABLE>
>]

  n2:p0:s -> n3:n [weight=0.01]
  n1:p0:s -> n2:n [weight=0.01]
  n5:p0:s -> n6:n [weight=0.01]
  n7:p0:s -> n8:n [weight=0.01]
  n4:p0:s -> n5:n [weight=0.01]
  n4:p1:s -> n7:n [weight=0.01]
  n10:p0:s -> n11:n [weight=0.01]
  n9:p0:s -> n10:n [weight=0.01]
  n0:p0:s -> n1:n [weight=0.01]
  n0:p1:s -> n4:n [weight=0.01]
  n0:p2:s -> n9:n [weight=0.01]
}

